--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
+		"dev": "npx vite",
+		"build": "tsc && npx vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "npx vite preview",
 		"predeploy": "npm run build",
